start blog and about page

--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -1,5 +1,4 @@
 .modalCard {
-  /* height: 100vh; */
   justify-content: center;
   align-items: center;
   display: flex;
@@ -104,6 +103,20 @@ input::-webkit-inner-spin-button {
   font-size: 1rem;
 }
 
+.p-error {
+  font-size: .8rem;
+}
+
 .p-Disclaimer {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
+}
+
+@media (max-width: 468px) {
+  .pay button {
+    font-size: .7rem;
+  }
+
+  .p-error {
+    font-size: .6rem;
+  }
 }
