--- a/src/components/modal.css
+++ b/src/components/modal.css
@@ -104,7 +104,7 @@ input::-webkit-inner-spin-button {
 }
 
 .p-error {
-  font-size: .8rem;
+  font-size: 1rem;
 }
 
 .p-Disclaimer {
@@ -113,10 +113,6 @@ input::-webkit-inner-spin-button {
 
 @media (max-width: 468px) {
   .pay button {
-    font-size: .7rem;
-  }
-
-  .p-error {
-    font-size: .6rem;
+    font-size: 0.7rem;
   }
 }
