--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4284,7 +4284,7 @@ button {
 .event-section::after {
   top: 0;
   left: 0;
-  background: url(../../assets/images/shape-img/08.png) no-repeat;
+  background: black no-repeat;
   background-position: center;
   background-size: 115% 30%;
 }
@@ -4501,7 +4501,7 @@ button {
 .feature-section::after {
   bottom: 0;
   left: 0;
-  background: url(../../assets/images/shape-img/07.png) no-repeat;
+  background: black no-repeat;
   background-position: center;
   background-size: cover;
 }
@@ -4940,7 +4940,7 @@ button {
   top: 60%;
   width: 85%;
   height: 60%;
-  background-image: url(../../assets/images/shape-img/10.png);
+  background: black;
   background-repeat: no-repeat;
   transform: translateY(-50%);
   background-size: 70%;
@@ -4968,7 +4968,7 @@ button {
 }
 
 .achievement-section {
-  background: url(../../assets/images/shape-img/02.png) no-repeat;
+  background: black no-repeat;
   background-position: center;
 }
 .achievement-section .section-header {
@@ -4997,7 +4997,7 @@ button {
 }
 @media (min-width: 992px) {
   .achievement-section.style-3 {
-    background: url(../../assets/images/shape-img/05.png) no-repeat;
+    background: black no-repeat;
     background-size: 100% 100%;
     background-position: center;
   }
